--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,89 @@
 @import "tailwindcss";
+
+:root {
+  color-scheme: dark light;
+}
+
+body {
+  @apply bg-stone-300 dark:bg-stone-900 text-stone-800 dark:text-stone-200 font-sans;
+}
+
+.md h1 {
+  @apply text-6xl mt-12 mb-5;
+}
+
+.md h2 {
+  @apply text-5xl mt-10 mb-4;
+}
+
+.md h3 {
+  @apply text-4xl mt-8 mb-4;
+}
+
+.md h4 {
+  @apply text-3xl mt-6 mb-3;
+}
+
+.md h5 {
+  @apply text-2xl mt-4 mb-2 font-semibold;
+}
+
+.md h6 {
+  @apply text-xl mt-2 mb-1 font-semibold;
+}
+
+.md p {
+  @apply my-2;
+}
+
+.md code {
+  @apply font-mono;
+}
+
+.md ul,
+.md ol {
+  display: block;
+  list-style-type: disc;
+  padding-inline-start: 2rem;
+}
+
+.md ol {
+  list-style-type: decimal;
+}
+
+.md li {
+  display: list-item;
+  text-align: match-parent;
+}
+
+.md ::marker {
+  unicode-bidi: isolate;
+  font-variant-numeric: tabular-nums;
+  text-transform: none;
+}
+
+.md table {
+  @apply w-fit mx-auto bg-stone-200 dark:bg-stone-800 rounded-lg overflow-hidden;
+}
+
+.md td,
+.md th {
+  @apply px-4;
+}
+
+.md th {
+  @apply bg-stone-100 dark:bg-stone-700;
+}
+
+.md pre.astro-code {
+  @apply p-4 rounded-lg w-fit max-w-full mx-auto;
+}
+
+.md img,
+.md video {
+  @apply p-4 rounded-lg w-fit max-w-full mx-auto;
+}
+
+.md blockquote {
+  @apply pl-4 relative before:bottom-0 before:top-0 before:w-1 before:bg-sky-800 before:absolute before:left-[0.325rem] before:rounded-full;
+}
