--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Base from "../layouts/Base.astro";
 ---
 
-<Base title="404">
+<Base title="404" description="页面未找到">
   <body class="flex flex-col gap-8">
     <div class="mt-[20dvh] mx-8 flex flex-col gap-4 text-wrap">
       <h1 class="text-7xl">404</h1>
