--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,22 @@ body {
   @apply bg-stone-300 dark:bg-stone-900 text-stone-800 dark:text-stone-200 font-sans;
 }
 
+.link {
+  @apply hover:text-sky-800 hover:dark:text-sky-200 bg-transparent transition-colors duration-100 ease-in;
+}
+
+.ib-link {
+  @apply text-sky-800 dark:text-sky-200 bg-transparent transition-colors duration-100 ease-in inline-block hover:bg-sky-300/60 hover:dark:bg-sky-900/60 underline;
+}
+
+.inside-link {
+  @apply hover:text-yellow-800 hover:dark:text-yellow-200 bg-transparent transition-colors duration-100 ease-in;
+}
+
+.inside-ib-link {
+  @apply inline-block text-yellow-800 dark:text-yellow-200 hover:bg-yellow-300/60 hover:dark:bg-yellow-900/60 underline bg-transparent transition-colors duration-100 ease-in;
+}
+
 .md h1 {
   @apply text-7xl mt-20 mb-5;
 }
@@ -38,7 +54,7 @@ body {
 }
 
 .md a {
-  @apply text-sky-800 dark:text-sky-200 underline hover:bg-sky-300 hover:dark:bg-sky-900 transition-colors duration-100;
+  @apply text-sky-800 dark:text-sky-200 underline hover:bg-sky-300/60 hover:dark:bg-sky-900/60 bg-transparent transition-colors duration-100 ease-in;
 }
 
 .md code {
