--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,10 +3,15 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base title="404" description="页面未找到">
-  <body class="flex flex-col gap-8">
-    <div class="mt-[20dvh] mx-8 flex flex-col gap-4 text-wrap">
+  <main class="max-w-[60rem] mx-auto my-4 p-4">
+    <section class="mt-[20dvh] mx-8 flex flex-col gap-4 text-wrap relative">
       <h1 class="text-7xl">404</h1>
       <p class="text-2xl">页面未找到</p>
-    </div>
-  </body>
+      <div
+        class="font-mono text-9xl font-thin text-stone-700/60 absolute top-4 right-4 p-4 border rounded-2xl -z-10"
+      >
+        QwQ
+      </div>
+    </section>
+  </main>
 </Base>
