--- a/src/pages/blogs/[id].astro
+++ b/src/pages/blogs/[id].astro
@@ -35,12 +35,10 @@ const { Content } = await render(post);
   keywords={post.data.tags}
 >
   <header class="mt-2 mx-auto sticky top-2 px-8 max-w-[60rem] z-50">
-    <div class="flex bg-stone-200 dark:bg-stone-700 p-2 rounded-full">
-      <a
-        href="/"
-        class="px-2 rounded-full hover:bg-stone-100 dark:hover:bg-stone-600 transition duration-100"
-        >Pizero</a
-      >
+    <div
+      class="flex bg-stone-200 dark:bg-stone-700 py-2 px-4 justify-center rounded-full gap-4"
+    >
+      <a href="/" class="inside-link">首页</a>
     </div>
   </header>
   <main class="md px-8 py-4 max-w-[60rem] mx-auto">
@@ -48,4 +46,5 @@ const { Content } = await render(post);
     <div></div>
     <Content />
   </main>
+  <footer></footer>
 </Base>
