--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,21 +13,21 @@ const posts = await getCollection("blogs");
   keywords={["blog", "pizero", "博客"]}
 >
   <main
-    class="gap-8 font-sans mt-[20dvh] mx-8 flex flex-col md:flex-row text-wrap mb-4"
+    class="font-sans mt-[20dvh] text-wrap mb-4 max-w-[60rem] mx-auto p-4 relative"
   >
-    <div class="flex gap-4 flex-col max-w-[40rem]">
-      <h1 class="text-7xl">Pizero</h1>
+    <section class="flex gap-4 flex-col">
+      <h1 class="text-7xl font-black">Pizero</h1>
       <div class="flex flex-col gap-2">
-        <p>摸鱼摆烂乐子人，技校在读学生，会点前端/后端开发，偶尔写写代码。</p>
         <p>
-          自主起的项目基本上没有，全是玩具，用的都是轮椅，喜欢 KISS
-          和写一次性代码，突出一个能用就行。
+          这个网名基本上就是一个随机数随机出来的，只要能确保指向的是我，怎么叫都行。
         </p>
         <p>
           学业上基本上就是混子，上课摸鱼摆烂，能多拿一分就一分，拿不到开摆。
         </p>
+        <p>摸鱼摆烂乐子人，技校在读学生，会点前端/后端开发，偶尔写写代码。</p>
         <p>
-          这个网名基本上就是一个随机数随机出来的，只要能确保指向的是我，怎么叫都行。
+          自主起的项目基本上没有，全是玩具，用的都是轮椅，喜欢 KISS
+          和写一次性代码，突出一个能用就行。
         </p>
       </div>
       <div
@@ -37,22 +37,22 @@ const posts = await getCollection("blogs");
           "bg-stone-200",
           "dark:bg-stone-800",
           "p-2",
+          "px-4",
+          "gap-4",
           "rounded-full",
+          "w-fit",
         ].join(" ")}
       >
         {
           config.links.map((i) => (
-            <a
-              href={i.link}
-              class="px-2 rounded-full hover:bg-stone-100 dark:hover:bg-stone-700 transition duration-100"
-            >
+            <a href={i.link} class="link">
               {i.name}
             </a>
           ))
         }
       </div>
-    </div>
-    <div class="flex flex-col gap-4 grow">
+    </section>
+    <section class="mt-8 flex flex-col gap-4 grow">
       <h2 class="text-5xl">博客</h2>
       <div class="flex flex-col gap-2 w-full">
         {
@@ -64,6 +64,11 @@ const posts = await getCollection("blogs");
             .map((post) => <PostBlock post={post} />)
         }
       </div>
+    </section>
+    <div
+      class="font-mono text-9xl font-thin text-stone-700/60 absolute top-4 right-4 p-4 border rounded-2xl -z-10"
+    >
+      &gt;_&lt;
     </div>
   </main>
 </Base>
