--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,10 @@
 ---
+import WebInfo from "../components/WebInfo.astro";
 import Base from "../layouts/Base.astro";
 ---
 
 <Base title="404" description="页面未找到">
-  <main class="max-w-[60rem] mx-auto my-4 p-4">
+  <main class="max-w-[60rem] mx-auto p-4 min-h-dvh relative">
     <section class="mt-[20dvh] mx-8 flex flex-col gap-4 text-wrap relative">
       <h1 class="text-7xl">404</h1>
       <p class="text-2xl">页面未找到</p>
@@ -12,6 +13,14 @@ import Base from "../layouts/Base.astro";
       >
         QwQ
       </div>
+      <a
+        href="/"
+        class="block after:content-['->'] after:inline-block after:ml-0 hover:after:ml-4 after:transition-all bg-stone-200 dark:bg-stone-800 w-fit py-2 px-4 rounded-full"
+        >回到首页</a
+      >
+    </section>
+    <section class="absolute bottom-4 left-0 right-0">
+      <WebInfo />
     </section>
   </main>
 </Base>
