--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import { getCollection } from "astro:content";
 import config from "../../indexConfig.json";
 import PostBlock from "../components/PostBlock.astro";
 import Base from "../layouts/Base.astro";
+import WebInfo from "../components/WebInfo.astro";
 
 const posts = await getCollection("blogs");
 ---
@@ -13,9 +14,14 @@ const posts = await getCollection("blogs");
   keywords={["blog", "pizero", "博客"]}
 >
   <main
-    class="font-sans mt-[20dvh] text-wrap mb-4 max-w-[60rem] mx-auto p-4 relative"
+    class="font-sans min-h-dvh text-wrap max-w-[60rem] mx-auto p-4 relative"
   >
-    <section class="flex gap-4 flex-col">
+    <div
+      class="font-mono text-9xl font-thin text-stone-700/60 absolute top-8 right-4 p-4 border rounded-2xl -z-10"
+    >
+      &gt;_&lt;
+    </div>
+    <section class="mt-[20dvh] flex gap-4 flex-col">
       <h1 class="text-7xl font-black">Pizero</h1>
       <div class="flex flex-col gap-2">
         <p>
@@ -65,10 +71,6 @@ const posts = await getCollection("blogs");
         }
       </div>
     </section>
-    <div
-      class="font-mono text-9xl font-thin text-stone-700/60 absolute top-4 right-4 p-4 border rounded-2xl -z-10"
-    >
-      &gt;_&lt;
-    </div>
   </main>
+  <footer class="m-4"><WebInfo /></footer>
 </Base>
