feat: add favicon & astro ts support & rss support

--- a/src/components/WebInfo.astro
+++ b/src/components/WebInfo.astro
@@ -2,15 +2,15 @@
 import "../styles/global.css";
 ---
 
-<section class="mx-auto w-fit text-wrap text-stone-600 dark:text-stone-400">
-  本网站无备案，
-  <a
-    href="https://vercel.com/docs/domains/troubleshooting#ipv6-support"
-    class="ib-link">不支持 IPv6</a
-  >
-  ，
-  <a href="https://github.com/pizerolol/this-blog" class="ib-link"
-    >Github Repo</a
-  >
-  。
+<section class="mx-auto w-fit max-w-full text-wrap text-stone-600 dark:text-stone-400">
+    <span>
+      本网站无备案
+      <a
+        href="https://vercel.com/docs/domains/troubleshooting#ipv6-support"
+        class="ib-link">不支持 IPv6</a>
+    </span>
+    <a href="https://github.com/pizerolol/this-blog" class="ib-link"
+      >Github Repo</a
+    >
+    <a href="/rss.xml" class="inside-ib-link">RSS</a>
 </section>
