--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,4 +1,5 @@
 ---
+import Icon from "../favicon.svg";
 import "../styles/global.css";
 interface Props {
   title?: string;
@@ -13,6 +14,7 @@ const props = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="icon" href={Icon.src} type="image/svg+xml" />
     <meta name="author" content="pizero" />
     <meta name="color-scheme" content="dark light" />
     {props.title && <title>{props.title}</title>}
