--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -17,7 +17,7 @@ const props = Astro.props;
     <link rel="icon" href={Icon.src} type="image/svg+xml" />
     <meta name="author" content="pizero" />
     <meta name="color-scheme" content="dark light" />
-    {props.title && <title>{props.title}</title>}
+    {props.title && <title>pizero/{props.title}</title>}
     {
       props.description && (
         <meta name="description" content={props.description} />
