--- a/src/pages/blogs/[id].astro
+++ b/src/pages/blogs/[id].astro
@@ -31,7 +31,7 @@ const { Content } = await render(post);
 ---
 
 <Base
-  title={post.data.title}
+  title={`blogs/${post.data.title}`}
   description={post.data.description}
   keywords={post.data.tags}
 >
