--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import config from "../../indexConfig.json";
 import PostBlock from "../components/PostBlock.astro";
 import Base from "../layouts/Base.astro";
 import WebInfo from "../components/WebInfo.astro";
+import OnlineStatus from "../components/solidjs/OnlineStatus";
 
 const posts = await getCollection("blogs");
 ---
@@ -13,9 +14,7 @@ const posts = await getCollection("blogs");
   description="Pizero 的个人博客"
   keywords={["blog", "pizero", "博客"]}
 >
-  <main
-    class="font-sans min-h-dvh text-wrap max-w-[60rem] mx-auto p-4 relative"
-  >
+  <main class="font-sans text-wrap max-w-[60rem] mx-auto p-4 relative">
     <div
       class="font-mono text-9xl font-thin text-stone-700/60 absolute top-8 right-4 p-4 border rounded-2xl -z-10"
     >
@@ -44,11 +43,14 @@ const posts = await getCollection("blogs");
           "dark:bg-stone-800",
           "p-2",
           "px-4",
+          "pl-3",
           "gap-4",
           "rounded-full",
           "w-fit",
         ].join(" ")}
       >
+        <OnlineStatus client:only="solidjs" />
+
         {
           config.links.map((i) => (
             <a href={i.link} class="link">
